--- a/src/postcss/estilos.css
+++ b/src/postcss/estilos.css
@@ -31,10 +31,14 @@ body{
 	font-family: var(--fuenteS);
 	margin: 0;
 	padding: 0;
+
 }
 h1,h2,h3,h4,h5,figure,ul{
 	margin: 0;
 	padding: 0;
+}
+p{
+	line-height: 1.5em;
 }
 img{
 	width: 100%;
@@ -43,19 +47,36 @@ img{
 .margen{
 	margin: 0 5em;
 }
+/* -------- scroll --------------*/
+.container{
+    scroll-snap-type: y mandatory;
+    max-height: 100vh;
+    overflow-y: scroll;
+    & .animacion{
+    	height: 100vh;
+    	scroll-snap-align: start;
+    	box-sizing: border-box;
+    	display: flex;
+    	align-items: center;
+    }
+}
 /* --------------- Portada ---------------*/
 .portada{
 	display: flex;
+	scroll-snap-align: start;
+	max-height: 100vh;
+	position: relative;
 	& .header{
 		display: flex;
 		justify-content: space-between;
 		align-items: center;
 		position: absolute;
 		top: 2em;
+		left: 0;
 		margin: 0 5em;
 		z-index: 10;
 		& .logo{
-			width: 15%;
+			width: 30%;
 			& img{
 				width: 100%;
 			}
@@ -95,6 +116,7 @@ img{
 				color: var(--colorTexto);
 				margin-top: 2em;
 				margin-bottom: 3em;
+				line-height: 1.5em;
 			}
 			& .btn{
 				@apply --btn;
@@ -122,8 +144,9 @@ img{
 	background: var(--colorRojoFondo);
 	text-align: center;
 	padding: 6em 0;
-	height: 110vh;
+	height: 101vh;
 	box-sizing: border-box;
+	scroll-snap-align: start;
 	& .title{
 		color: white;
 		font-family: var(--fuenteP);
@@ -132,6 +155,7 @@ img{
 	& .descripcion{
 		color: white;
 		width: 80%;
+		margin: 2em auto;
 	}
 	& .grid{
 		display: grid;
