Se convirtio responsive el landig page

--- a/src/postcss/estilos.css
+++ b/src/postcss/estilos.css
@@ -23,6 +23,10 @@
 		font-weight: bold;
 	};
 };
+@custom-media --animacion (width > 500px);
+@custom-media --tablet (width < 800px);
+@custom-media --mobile (width < 500px);
+@custom-media --min (width <= 360px);
 *{
 	transition: .3s;
 }
@@ -31,6 +35,7 @@ body{
 	font-family: var(--fuenteS);
 	margin: 0;
 	padding: 0;
+	overflow-x: hidden;
 
 }
 h1,h2,h3,h4,h5,figure,ul{
@@ -46,26 +51,35 @@ img{
 }
 .margen{
 	margin: 0 5em;
+	@media (--mobile) {
+		margin: 0 2em;
+	}
 }
 /* -------- scroll --------------*/
 .container{
-    scroll-snap-type: y mandatory;
-    max-height: 100vh;
-    overflow-y: scroll;
-    & .animacion{
-    	height: 100vh;
-    	scroll-snap-align: start;
-    	box-sizing: border-box;
-    	display: flex;
-    	align-items: center;
-    }
+	@media (--animacion) {
+		
+	    scroll-snap-type: y mandatory;
+	    max-height: 100vh;
+	    overflow-y: scroll;
+	    & .animacion{
+	    	height: 100vh;
+	    	scroll-snap-align: start;
+	    	box-sizing: border-box;
+	    	display: flex;
+	    	align-items: center;
+	    }
+	}
 }
 /* --------------- Portada ---------------*/
 .portada{
 	display: flex;
-	scroll-snap-align: start;
-	max-height: 100vh;
 	position: relative;
+	@media (--tablet) {
+		background: url('../img/fondo.png') center center no-repeat;
+		background-size: cover;
+		
+	}
 	& .header{
 		display: flex;
 		justify-content: space-between;
@@ -77,6 +91,9 @@ img{
 		z-index: 10;
 		& .logo{
 			width: 30%;
+			@media (--tablet) {
+				width: 40%;
+			}
 			& img{
 				width: 100%;
 			}
@@ -102,24 +119,53 @@ img{
 		display: grid;
 		grid-template-columns: 1fr 1fr;
 		height: 100vh;
+		background: color(white a(80%));
+		@media (--tablet) {
+			grid-template-columns: 1fr;
+		}
 		& .copy{
 			padding: 2em 5em 0;
 			display: flex;
 			flex-direction: column;
 			justify-content: center;
+			@media (--tablet) {
+				padding: 4em;
+			}
+			@media (--mobile) {
+				padding: 2em !important;
+			}
 			& .title{
 				color: var(--colorTexto);
 				font-size: 3rem;
 				font-family: var(--fuenteP);
+				@media (--mobile) {
+					font-size: 2rem;
+				}
 			}
 			& .descripcion{
 				color: var(--colorTexto);
 				margin-top: 2em;
 				margin-bottom: 3em;
 				line-height: 1.5em;
+				@media (--tablet) {
+					font-size: 1.3rem;
+				}
+				@media (--mobile) {
+					font-size: 1.1rem !important;
+					text-align: center;
+				}
 			}
 			& .btn{
 				@apply --btn;
+				@media (--tablet) {
+					font-size: 1.3rem;
+				}
+				@media (--mobile) {
+					font-size: 1.1rem !important;
+				}
+				@media (--min) {
+					font-size: .9rem !important;
+				}
 			}
 		}
 		& .fondo{
@@ -128,6 +174,9 @@ img{
 			width: 100%;
 			height: 100%;
 			position: relative;
+			@media (--tablet) {
+				display: none;
+			}
 			& .over{
 				position: absolute;
 				top: 0;
@@ -144,9 +193,7 @@ img{
 	background: var(--colorRojoFondo);
 	text-align: center;
 	padding: 6em 0;
-	height: 101vh;
 	box-sizing: border-box;
-	scroll-snap-align: start;
 	& .title{
 		color: white;
 		font-family: var(--fuenteP);
@@ -156,12 +203,22 @@ img{
 		color: white;
 		width: 80%;
 		margin: 2em auto;
+		@media (--tablet) {
+			display: none;
+		}
 	}
 	& .grid{
 		display: grid;
 		grid-template-columns: repeat(4, 1fr);
 		grid-gap: 4em;
 		margin-top: 5em;
+		@media (--tablet) {
+			grid-template-columns: 1fr 1fr;
+			grid-gap: 2em 4em;
+		}
+		@media (--mobile) {
+			grid-template-columns: 1fr !important;
+		}
 		& img{
 			width: 100%;
 		}
@@ -200,6 +257,12 @@ img{
 		margin-top: 5em;
 		overflow: hidden;
 		border-radius: 5px;
+		@media (--tablet) {
+			grid-template-columns: 1fr 1fr;
+		}
+		@media (--mobile) {
+			grid-template-columns: 1fr !important;
+		}
 		& .item{
 			position: relative;
 			overflow: hidden;
@@ -242,7 +305,6 @@ img{
 .objetivos{
 	background: var(--colorAmarillo);
 	padding: 5em 0;
-	height: 110vh;
 	box-sizing: border-box;
 	display: flex;
 	flex-direction: column;
@@ -260,6 +322,14 @@ img{
 		grid-template-areas: "numero menu"
 							 "descripcion imagen"
 							 "boton imagen";
+		@media (--tablet) {
+			width: 90%;
+		}
+		@media (--mobile) {
+			grid-template-areas: "numero menu"
+							 "descripcion descripcion"
+							 "boton boton";
+		}
 		& .numero{
 			grid-area: numero;
 			font-family: var(--fuenteP);
@@ -272,6 +342,9 @@ img{
 			display: flex;
 			& .item{
 				margin: 0 .5em;
+				@media (--min) {
+					margin: 0 .2em;
+				}
 				& a{
 					color: white;
 					background: var(--colorAzulFondo);
@@ -291,6 +364,7 @@ img{
 		& .descripcion{
 			grid-area: descripcion;
 			color: var(--colorTexto);
+			margin-bottom: 3em;
 		}
 		& .boton{
 			grid-area: boton;
@@ -305,6 +379,7 @@ img{
 .profesores{
 	background: var(--colorAzulFondo);
 	padding: 3em 0 5em;
+	scroll-snap-stop: always;
 	& .title{
 		@apply --title;
 		color: white;
@@ -315,6 +390,18 @@ img{
 		grid-template-columns: repeat(3, 1fr);
 		grid-gap: 3em;
 		margin-top: 2em;
+		@media (--tablet) {
+			grid-template-columns: 1fr 1fr;
+			& .item:nth-of-type(3){
+				display: none;
+			}
+		}
+		@media (--mobile) {
+			grid-template-columns: 1fr !important;
+			& .item:nth-of-type(3){
+				display: block !important;
+			}
+		}
 		& .item{
 			overflow: hidden;
 			border-radius: 5px;
@@ -388,10 +475,16 @@ img{
 		grid-template-columns: 1fr 1fr;
 		border-radius: 5px;
 		overflow: hidden;
+		@media (--tablet) {
+			grid-template-columns: 1fr;
+		}
 		& > .item{
 			background: white;
 			padding: 3em 4em;
 			position: relative;
+			@media (--mobile){
+				padding: 3em 2em;
+			}
 			& .triangulo{
 				width: 30%;
 				height: 25%;
@@ -424,6 +517,12 @@ img{
 				flex-direction: column;
 				margin-top: 7em;
 				z-index: 1000;
+				@media (--mobile) {
+					width: 80%;
+					& .btn{
+						width: 40%;
+					}
+				}
 				& .input, & .textarea{
 					font-family: var(--fuenteS);
 					font-size: 1rem;
@@ -466,10 +565,20 @@ img{
 						}
 					}
 				}
+				@media (--mobile) {
+					& .descripcion, & .datos{
+						width: 90%;
+					}
+				}
 				& .social{
-					display: flex;
+					display: grid;
+					grid-template-columns: repeat(4, 1fr);
 					list-style: none;
 					margin-top: 2em;
+					@media (--mobile) {
+						grid-template-columns: 1fr 1fr;
+						grid-gap: 2em;
+					}
 					& .item{
 						margin-right: 1em;
 						& a{
@@ -484,23 +593,6 @@ img{
 						}
 					}
 				}
-			}
-		}
-	}
-}
-.footer{
-	background: var(--colorAmarillo);
-	padding: 3em 0;
-	& .menu{
-		list-style: none;
-		display: flex;
-		& .item{
-			margin-right: 1em;
-			& a{
-				color: var(--colorTexto);
-				text-transform: uppercase;
-				text-decoration: none;
-				font-weight: bold;
 			}
 		}
 	}
