Se optimizaron las imagenes y se le agrego el critical path

--- a/src/jade/index.pug
+++ b/src/jade/index.pug
@@ -4,9 +4,8 @@ head
 	meta(charset="UTF-8")
 	title SuperAprendo
 	meta(name="viewport", content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0")
-	link(rel="stylesheet", href="css/fontawesome-all.min.css")
-	link(rel="stylesheet", href="css/estilos.css")
-	<link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:800" rel="stylesheet">
+	style.
+		body{font-family:M PLUS Rounded\ 1c,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Droid Sans,Helvetica Neue;font-family:Montserrat,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Droid Sans,Helvetica Neue;overflow-x:hidden}body,figure,h1{margin:0;padding:0}p{line-height:1.5em}img{width:100%;vertical-align:top}.portada{display:flex;position:relative}.portada .header{display:flex;justify-content:space-between;align-items:center;position:absolute;top:2em;left:0;margin:0 5em;z-index:1}.portada .header .logo{width:30%}.portada .header .logo img{width:100%}.portada .grid{display:grid;grid-template-columns:1fr 1fr;height:100vh;background:#fff;background:hsla(0,0%,100%,.8)}.portada .grid .copy{padding:2em 5em 0;display:flex;flex-direction:column;justify-content:center}.portada .grid .copy .title{color:#105398;font-size:48px;font-size:3rem;font-family:M PLUS Rounded\ 1c,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Droid Sans,Helvetica Neue}.portada .grid .copy .descripcion{color:#105398;margin-top:2em;margin-bottom:3em;line-height:1.5em}.portada .grid .copy .btn{text-decoration:none;text-transform:uppercase;color:#fff;background:#f72139;border-radius:5px;padding:1em;font-weight:700}.portada .grid .fondo{background:url(../img/fondo.png) 50% no-repeat;background-size:cover;width:100%;height:100%;position:relative}.portada .grid .fondo .over{position:absolute;top:0;left:0;width:100%;height:100%;background:#156fcb;background:rgba(21,111,203,.3)}.objetivos .objetivo .numero{grid-area:a;font-family:M PLUS Rounded\ 1c,system-ui,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Droid Sans,Helvetica Neue;color:#156fcb;font-size:80px;font-size:5rem}.objetivos .objetivo .menu{grid-area:b;list-style:none;display:flex}.objetivos .objetivo .imagen{grid-area:d;grid-row-start:1;margin-top:3em}.objetivos .objetivo .descripcion{grid-area:c;color:#105398;margin-bottom:3em}.objetivos .objetivo .boton{grid-area:e}@media (max-width:499px){.portada .grid .copy{padding:2em!important}.portada .grid .copy .title{font-size:2rem}.portada .grid .copy .descripcion{font-size:1.1rem!important;text-align:center}.portada .grid .copy .btn{font-size:1.1rem!important}}@media (min-width:501px){.container{scroll-snap-type:y mandatory;max-height:100vh;overflow-y:scroll}.container .animacion{height:100vh;scroll-snap-align:start;box-sizing:border-box;display:flex;align-items:center}}@media (max-width:799px){.portada{background:url(../img/fondo.png) 50% no-repeat;background-size:cover}.portada .header .logo{width:40%}.portada .grid{grid-template-columns:1fr}.portada .grid .copy{padding:4em}.portada .grid .copy .btn,.portada .grid .copy .descripcion{font-size:1.3rem}.portada .grid .fondo{display:none}}@media (max-width:360px){.portada .grid .copy .btn{font-size:.9rem!important}}
 body
 	.container
 		// ------- Portada --------
@@ -178,6 +177,9 @@ body
 								a(href="#")
 									span.fab.fa-youtube
 		// ------- footer --------
+	link(rel="stylesheet", href="css/fontawesome-all.min.css")
+	link(rel="stylesheet", href="css/estilos.css")
+	<link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:800" rel="stylesheet">
 	script(src="js/css-scroll-snap-polyfill@0.1.2")
 	script.
 		cssScrollSnapPolyfill();
