Se agrego una animación a los botones del footer

--- a/src/jade/index.pug
+++ b/src/jade/index.pug
@@ -10,17 +10,6 @@ body
 	.container
 		// ------- Portada --------
 		section.portada.animacion
-			//ul.menu
-				li.item
-					a(href="#") Cursos
-				li.item
-					a(href="#") Profesores
-				li.item
-					a(href="#") Blog
-				li.item
-					a(href="#") Información
-				li.item
-					a(href="#") Donación
 			.grid
 				.copy
 					header.header
@@ -180,6 +169,6 @@ body
 	link(rel="stylesheet", href="css/fontawesome-all.min.css")
 	link(rel="stylesheet", href="css/estilos.css")
 	<link href="https://fonts.googleapis.com/css?family=M+PLUS+Rounded+1c:800" rel="stylesheet">
+	script(src="js/blazy.min.js")
 	script(src="js/css-scroll-snap-polyfill@0.1.2")
-	script.
-		cssScrollSnapPolyfill();
+	script(src="js/index.js")
