--- a/src/postcss/estilos.css
+++ b/src/postcss/estilos.css
@@ -55,6 +55,65 @@ img{
 		margin: 0 2em;
 	}
 }
+.load{
+	width: 100%;
+	min-height: 250px;
+	background: color(var(--colorTexto) a(50%));
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	box-sizing: border-box;
+	@media(--tablet){
+		height: 200px;
+	}
+	@media(--mobile){
+		height: 180px !important;
+	}
+
+	& .loader{
+		width: 80px;
+		height: 80px;
+		border-radius: 50%;
+		overflow: hidden;
+		position: absolute;
+		z-index: 1;
+		& .circulo{
+			width: 100%;
+			height: 100%;
+			border: 8px solid color(var(--azul) a(80%));
+			border-radius: 50%;
+			position: absolute;
+			box-sizing: border-box;
+		}
+		& .movimiento{
+			clip: rect(0px, 80px, 40px, 40px);
+			width: 100%;
+			height: 100%;
+			border: 8px solid white;
+			border-radius: 50%;
+			position: absolute;
+			box-sizing: border-box;
+			transform: rotate(-45deg);
+			animation: rotar 1s ease-in-out infinite;
+		}
+	}
+}
+.b-lazy{
+	opacity: 0;
+}
+.b-loaded{
+	opacity: 1;
+	z-index: 10;
+	transition: .3s;
+}
+@keyframes rotar{
+	0%{
+		transform: rotate(-45deg);
+	}
+	100%{
+		transform: rotate(315deg);
+	}
+}
 /* -------- scroll --------------*/
 .container{
 	@media (--animacion) {
@@ -420,6 +479,7 @@ img{
 					background: var(--colorAzulFondo);
 					position: absolute;
 					bottom: -30%;
+					z-index: 500;
 				}
 				& .foto{
 					clip-path: polygon(0 25%, 25% 0, 75% 0,100% 25%,50% 100%);
@@ -589,6 +649,9 @@ img{
 							clip-path: polygon(0 25%, 25% 0, 75% 0,100% 25%,50% 100%);
 							& span{
 								margin-bottom: 1em;
+							}
+							&:hover{
+								background: var(--colorAmarillo);
 							}
 						}
 					}
